# My-Neural-Network

./: ARCHITECTURE.md  AUTODIFF_PROGRESS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TESTING_REPORT.md
examples/: activation_functions.rs  advanced_operations.rs  autodiff_demo.rs  basic_usage.rs  core_features_demo.rs  high_level_nn.rs  minimal_core_demo.rs  mnist_demo.rs  mnist_with_nn_api.rs  performance_test.rs  regression.rs  simple_autodiff.rs  simple_core_demo.rs  simple_mnist.rs  simple_neural_network.rs  working_demo.rs  xor.rs
src/: activation.rs  layer.rs  lib.rs  loss.rs  matrix.rs  network.rs
src/autodiff/: grad.rs  graph.rs  mod.rs  ops.rs  tape.rs  test_utils.rs
src/backend/: mod.rs
src/broadcast/: mod.rs
src/data/: mod.rs
src/error/: mod.rs
src/nn/: init.rs  layers.rs  loss.rs  mod.rs
src/ops/: mod.rs
src/optim/: adam.rs  mod.rs  sgd.rs
src/shape/: mod.rs
src/tensor/: mod.rs
src/train/: loop_trainer.rs  metrics.rs  mod.rs
tests/: integration_tests.rs
